Two displays appears as connected, but only one display actually is
After updating Linux to 6.10.8 from 6.10.7, additional screen (Unknown-1) appeared which is not connected. Downgrade to 6.10.7 solves the problem.
uname: Linux 6.10.8-arch1-1 #1 SMP PREEMPT_DYNAMIC Wed, 04 Sep 2024 15:16:37 +0000 x86_64 GNU/Linux
on Intel(R) Core(TM) Ultra 7 155U
lspci:
00:02.0 VGA compatible controller [0300]: Intel Corporation Meteor Lake-P [Intel Graphics] [8086:7d45] (rev 08) (prog-if 00 [VGA controller])
Subsystem: Lenovo Device [17aa:2329]
Flags: bus master, fast devsel, latency 0, IRQ 158, IOMMU group 0
Memory at 4058000000 (64-bit, prefetchable) [size=16M]
Memory at 4000000000 (64-bit, prefetchable) [size=256M]
Expansion ROM at 000c0000 [virtual] [disabled] [size=128K]
Capabilities: [40] Vendor Specific Information: Len=0c <?>
Capabilities: [70] Express Root Complex Integrated Endpoint, IntMsgNum 0
Capabilities: [ac] MSI: Enable+ Count=1/1 Maskable+ 64bit+
Capabilities: [d0] Power Management version 3
Capabilities: [100] Null
Capabilities: [110] Process Address Space ID (PASID)
Capabilities: [200] Address Translation Service (ATS)
Capabilities: [420] Physical Resizable BAR
Capabilities: [320] Single Root I/O Virtualization (SR-IOV)
Capabilities: [400] Latency Tolerance Reporting
Kernel driver in use: i915
Kernel modules: i915, xe
xrandr:
Screen 0: minimum 16 x 16, current 3840 x 1200, maximum 32767 x 32767
eDP-1 connected primary 1920x1200+0+0 (0x23) normal (normal left inverted right x axis y axis) 302mm x 189mm
Identifier: 0x21
Timestamp: 20958
Subpixel: unknown
Gamma: inf:inf:inf
Brightness: 0.45
Clones:
CRTC: 0
CRTCs: 0
Transform: 1.000000 0.000000 0.000000
0.000000 1.000000 0.000000
0.000000 0.000000 1.000000
filter:
RANDR Emulation: 1
non-desktop: 0
supported: 0, 1
1920x1200 (0x23) 193.250MHz -HSync +VSync *current +preferred
Unknown-1 connected 1920x1200+1920+0 (0x23) normal (normal left inverted right x axis y axis) 508mm x 317mm
Identifier: 0x501
Timestamp: 20958
Subpixel: unknown
Gamma: 1.0:1.0:1.0
Brightness: 0.0
Clones:
CRTC: 1
CRTCs: 1
Transform: 1.000000 0.000000 0.000000
0.000000 1.000000 0.000000
0.000000 0.000000 1.000000
filter:
RANDR Emulation: 1
non-desktop: 0
supported: 0, 1
1920x1200 (0x23) 193.250MHz -HSync +VSync *current +preferred
Edited by Grzegorz Alibożek